Closed
Bug 1838265
Opened 2 years ago
Closed 2 years ago
Clean up <title> code.
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
116 Branch
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-esr115+
|
Details | Review |
No description provided.
Assignee | ||
Comment 1•2 years ago
|
||
Trivialish clean-ups while I was looking at this code, and related
clean-ups elsewhere.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/61308401003b
Clean-up <title> code. r=smaug
Comment 3•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox116:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
Assignee | ||
Comment 4•2 years ago
|
||
Comment on attachment 9338913 [details]
Bug 1838265 - Clean-up <title> code. r=smaug,edgar
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Fixes at least some of the crashes in bug 1869325
- User impact if declined:
- Fix Landed on Version: 116
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivialish, has been in the tree for quite a while.
Attachment #9338913 -
Flags: approval-mozilla-esr115?
Comment 5•2 years ago
|
||
Comment on attachment 9338913 [details]
Bug 1838265 - Clean-up <title> code. r=smaug,edgar
Approved for 115.7esr.
Attachment #9338913 -
Flags: approval-mozilla-esr115? → approval-mozilla-esr115+
Updated•2 years ago
|
status-firefox-esr115:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•