Bug 1838265 - Clean-up <title> code. r=smaug, a=dmeehan

Trivialish clean-ups while I was looking at this code, and related
clean-ups elsewhere.

Differential Revision: https://phabricator.services.mozilla.com/D180850